# Peragro-Tempus

./: INSTALL  Jamfile  Jamfile.in  Jamrules  LICENSE  README  config-msvc.h  config.h.in  configure  configure.ac  cs_static.jam  pt-defaultdb.sql  pt-server.cfg  pt-testdb.sql  restartServer.sh  runServer.sh  shutdownServer.sh  startServer.sh  updateServer.sh  vfs-static.cfg  vfs.cfg
components/: Jamfile
components/entity/: Jamfile
data/anvil/: arrows.blend  arrows.xml  selection.blend  selection.xml  visuals.xml  visuals_rloop.xml
data/config/: anvil.cfg  client.cfg
data/gui/: buddylist.xml  buy.xml  charselect.xml  charselectnew.xml  chat.xml  chatlog.xml  connect.xml  entityhud.xml  inventory.xml  login.xml  npcdialog.xml  okdialog.xml  options.xml  playerhud.xml  sell.xml  skillhud.xml  status.xml  trade-pc.xml  whisper.xml
data/meshes/: all.xml
data/quests/: doorquests.xml
data/server/: peragro_data
data/skin/: Commonwealth-10.font  Commonwealth-8.font  Peragro.imageset  Peragro.looknfeel  Peragro.scheme  TaharezLook.imageset  TaharezLook.looknfeel  TaharezLook.scheme  TaharezLookSkin.scheme  book.imageset  icons.imageset  inventory.imageset  ptLook.tga  ptlook.psd  ptlook.tga  skill.imageset
data/world/: world
data/xml/: servers.xml
docs/: Jamfile  apihead.html  detailedapidocs.dox  devapi.dox  doxygrps  history.old  history.txt
docs/anvil/: commands.txt  uml.dia
docs/static/: index.html
include/: cacheentry.h  cachemanager.h  cacheuser.h  clipboard.h  effectsmanager.h  iclientcommand.h  icommandmanager.h  imybody.h  imystarbox.h  ipointerplug.h  ir2tmanager.h  isolarsys.h  soundmanager.h  terrained.h  world.h
mk/autoconf/: ax_boost_base.m4  ax_boost_program_options.m4  ax_boost_thread.m4  cel.m4  checkboost_filesystem.m4  checkboost_python.m4  checkboost_thread.m4  checkcommon.m4  checkstackless.m4  pt_check_boost.m4  pthread.m4
mk/jam/: msvcgen.jam  static.jam  unix.jam
mk/msvcgen/: control.tlib
mk/staticplugins/: README.txt  cel_staticplugins_msvc.jam  cel_staticplugins_msvc7.jam  cel_staticplugins_msvc71.jam  cel_staticplugins_msvc8.jam  cel_staticplugins_msvc9.jam  crystalspace_staticplugins_msvc.jam  crystalspace_staticplugins_msvc7.jam  crystalspace_staticplugins_msvc71.jam  crystalspace_staticplugins_msvc8.jam  crystalspace_staticplugins_msvc9.jam
msvc/: README
msvc/7/: appanvil.vcproj  appanvil_static.manifest  appanvil_static.rc  appanvil_static.vcproj  appanvil_static_staticuse_CRYSTAL.cpp  appauth-server.vcproj  appclient.rc  appclient.vcproj  appclient_static.rc  appclient_static.vcproj  appclient_static_static_glue_app_CRYSTAL.cpp  appclient_static_staticuse.cpp  appclient_static_staticuse_CRYSTAL.cpp  appcolldettest.vcproj  appcompilertest.vcproj  appconst_test.vcproj  appdatabasetest.vcproj  appeffectstest.rc  appeffectstest.vcproj  appeffectstest_static.vcproj  appentitytest.vcproj  appeventstest.manifest  appeventstest.rc  appeventstest.vcproj  appeventstest_static.rc  appeventstest_static.vcproj  appeventtest.vcproj  appgenerator.vcproj  appintstring_test.vcproj  appinventorytest.vcproj  appperagro-server.vcproj  appperagro-server_static.vcproj  appperagro.vcproj  appperagro_static.vcproj  apppoint_test.vcproj  apppolygon_test.vcproj  appprobability_test.vcproj  appquaternion_test.vcproj  approtmatrix_test.vcproj  appserver.rc  (+148 more)
msvc/71/: appanvil.manifest  appanvil.rc  appanvil.vcproj  appanvil_static.vcproj  appauth-server.vcproj  appclient.manifest  appclient.rc  appclient.vcproj  appclient_static.rc  appclient_static.vcproj  appclient_static_static_glue_lib.cpp  appclient_static_staticuse.cpp  appclient_static_staticuse_CRYSTAL.cpp  appcolldettest.rc  appcolldettest.vcproj  appcompilertest.vcproj  appconst_test.vcproj  appdatabasetest.vcproj  appeffectstest.vcproj  appeffectstest_static.manifest  appeffectstest_static.rc  appeffectstest_static.vcproj  appentitytest.vcproj  appeventstest.rc  appeventstest.vcproj  appeventstest_static.rc  appeventstest_static.vcproj  appeventtest.vcproj  appgenerator.vcproj  appintstring_test.vcproj  appinventorytest.vcproj  appperagro-server.vcproj  appperagro-server_static.vcproj  appperagro.vcproj  appperagro_static.vcproj  apppoint_test.vcproj  apppolygon_test.vcproj  appprobability_test.vcproj  appquaternion_test.vcproj  approtmatrix_test.vcproj  (+147 more)
msvc/8/: appanvil.vcproj  appanvil_static.vcproj  appanvil_static_staticuse_CRYSTAL.cpp  appauth-server.vcproj  appclient.vcproj  appclient_static.vcproj  appclient_static_staticuse.cpp  appclient_static_staticuse_CRYSTAL.cpp  appcolldettest.vcproj  appcompilertest.vcproj  appconst_test.vcproj  appdatabasetest.vcproj  appeffectstest.manifest  appeffectstest.vcproj  appeffectstest_static.vcproj  appentitytest.vcproj  appeventstest.vcproj  appeventstest_static.rc  appeventstest_static.vcproj  appeventtest.vcproj  appgenerator.vcproj  appintstring_test.vcproj  appinventorytest.vcproj  appperagro-server.vcproj  appperagro-server_static.vcproj  appperagro.vcproj  appperagro_static.vcproj  apppoint_test.vcproj  apppolygon_test.vcproj  appprobability_test.vcproj  appquaternion_test.vcproj  approtmatrix_test.vcproj  appserver.rc  appserver.vcproj  appserver_static.rc  appserver_static.vcproj  appshape_test.vcproj  apptimertest.vcproj  apptimestamp_test.vcproj  apptree_test.vcproj  (+140 more)
msvc/9/: appauth-server.vcproj  appclient.rc  appclient.vcproj  appclient_static.rc  appclient_static.vcproj  appclient_static_static_glue_lib.cpp  appclient_static_static_glue_lib_CRYSTAL.cpp  appclient_static_staticuse.cpp  appclient_static_staticuse_CRYSTAL.cpp  appcolldettest.vcproj  appcompilertest.vcproj  appconst_test.vcproj  appdatabasetest.vcproj  appeventtest.vcproj  (+150 more)
plugins/: Jamfile
scripts/: buildLinux.sh  create-peragro-art.sh  create-static-distro.cmd  deployServer.sh  fixmsvc.py  networkcodegenerator.sh  regenApiDocsCron.sh  regenMsvcCron.sh  regenMsvcCronBranches.sh  regenMsvcCronNewEntity.sh  restartServer.sh  runServer.sh  setupNewEntity.sh  shutdownServer.sh  startServer.sh  tileconvertor.py  updateServer.sh  updateStaticWiki.sh
src/: Jamfile
(+2574 files in other folders)
